# disk-failure-prediction-ml

./: .gitignore  README.md  pyproject.toml
app/: cli.py  predictor.py  pyproject.toml  smartctl_collect.py  smartctl_parse.py
data/datasets/: bad_dataset.csv  low_dataset.csv  smart_dev_sdd.txt  smart_hdd_sdb.txt  smartctl_2026-02-18.csv  smartctl_backblaze_2026-02-18.csv  smartctl_parsed.csv
disk_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
models/: random_forest_hdd.joblib
reports/: classification_report.txt  confusion_matrix.csv  metrics.json
scripts/: parse_smartctl_hdd.py  predict_disk.py  train_model.py
web/: config.py  pipeline.py  reports.py  web_app.py
web/templates/: index.html
