[build-system]
requires = ["setuptools>=41"]
build-backend = "setuptools.build_meta"

[project]
name = "disk-tool"
version = "0.1.0"
description = "HDD failure prediction tool based on SMART and ML"
requires-python = ">=3.8"
dependencies = [
  "pandas==1.5.3",
  "numpy==1.24.4",
  "scikit-learn==1.3.2",
  "joblib==1.3.2",
  "flask==2.3.3",
]

[project.scripts]
disk-tool = "app.cli:main"
disk-tool-web = "web.web_app:main"

[tool.setuptools]
packages = ["app","web"]