[build-system]
requires = ["setuptools>=41"]
build-backend = "setuptools.build_meta"

[project]
name = "disk-tool"
version = "0.1.0"
description = "HDD failure prediction tool based on SMART and ML"
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "joblib",
]

[project.scripts]
disk-tool = "app.cli:main"